--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+
+# Spring configurations
 spring.application.name=screener-backend
+server.port=1105
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# PostgreSQL database connection URL
+spring.datasource.url=jdbc:postgresql://localhost:5432/registration
+
+# PostgreSQL database credentials
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# PostgreSQL JDBC driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate settings for JPA
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
