--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings for JPA
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
