Added historical data processing and enhanced other code.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # Spring configurations
 spring.application.name=screener-backend
 server.port=1105
+# to stop project restarting on code change
+spring.devtools.restart.enabled=false
 
 server.error.include-message=always
 server.error.include-binding-errors=always
