Enhanced order book management logic and a few bug fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings for JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
@@ -32,3 +32,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# Root logging level (console and file)
+logging.level.root=INFO
+logging.level.dev.abu.screener_backend.analysis=INFO
+logging.file.name=logs/analysis.log
