Removed RabbitMQ, enhanced data flow.

--- a/config.properties
+++ b/config.properties
@@ -6,8 +6,7 @@ binance.fut-url=https://fapi.binance.com/fapi/v1
 binance.stream.spot-url=wss://stream.binance.com
 binance.stream.fut-url=wss://fstream.binance.com
 
-# if true, then binance.us will be used for all the URLs above
-location-us=false
+chunk-size=30
 cup-size=5
 max-incline=30
 fut-sign=.f
