Developed regitration endpoint fully

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # Spring configurations
 spring.application.name=screener-backend
 server.port=1105
+server.base-url=http://localhost:1105
 # to stop project restarting on code change
 spring.devtools.restart.enabled=false
 
@@ -23,3 +24,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
+
+# email settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
