Enhanced Depth WebSocket Client

--- a/config.properties
+++ b/config.properties
@@ -3,8 +3,8 @@
 binance.spot-url=https://api.binance.com/api/v3
 binance.fut-url=https://fapi.binance.com/fapi/v1
 
-binance.stream.spot-url=wss://stream.binance.com
-binance.stream.fut-url=wss://fstream.binance.com
+binance.stream.spot-url=wss://stream.binance.com/ws
+binance.stream.fut-url=wss://fstream.binance.com/ws
 
 chunk-size=200
 cup-size=5
